# BakaEngine

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: default.frag  default.vert
auto/: msvc-build.py
include/: Baka.h  baka_allocator.h  baka_application.h  baka_buffer.h  baka_button_state.h  baka_camera.h  baka_camera_base.h  baka_defines.h  baka_game_controller.h  baka_graphics.h  baka_input.h  baka_keycodes.h  baka_lights.h  baka_logger.h  baka_material.h  baka_mesh.h  baka_mousebuttons.h  baka_path_explorer.h  baka_platform.h  baka_pool_allocator.h  baka_primitives.h  baka_shader.h  baka_stack_allocator.h  baka_stopwatch.h  baka_time.h  baka_uniforms.h  baka_utils.h  baka_vertex_buffer_layout.h  singleton_defines.h
include/lights/: ambient_light.h  baka_lights.h  directional_light.h  light.h  lights_manager.h  point_light.h
modules/: FindGLEW.cmake  FindSDL2.cmake
offline_utils/: import-asset.py
resources/shaders/: default.frag
shaders/: default.frag  default.vert
src/: baka_application.cpp  baka_buffer.cpp  baka_button_state.cpp  baka_camera.cpp  baka_camera_base.cpp  baka_game_controller.cpp  baka_graphics.cpp  baka_input.cpp  baka_logger.cpp  baka_main.cpp  baka_material.cpp  baka_mesh.cpp  baka_path_explorer.cpp  baka_pool_allocator.cpp  baka_primitives.cpp  baka_shader.cpp  baka_stack_allocator.cpp  baka_stopwatch.cpp  baka_time.cpp  baka_utils.cpp  baka_vectors.cpp  baka_vertex_buffer.cpp  baka_vertex_buffer_layout.cpp
src/lights/: ambient_light.cpp  directional_light.cpp  lights.cpp  lights_manager.cpp  point_light.cpp
